log/build_2022-09-03_22-05-43/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 159
    if((random.randint(1, 10) % 3 == 0) and ):
                                            ^
SyntaxError: invalid syntax

